<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/user"
            android:title="@string/productos_item" />
      <!--  <item
            android:id="@+id/nav_validacion"
            android:icon="@drawable/validacion_cod"
            android:title="@string/compras_item" />
            -->
        <item
            android:id="@+id/nav_tomarImagen"
            android:icon="@drawable/photo_camera"
            android:title="@string/fotografia" />
        <item
            android:id="@+id/nav_recarga"
            android:icon="@drawable/payment_method"
            android:title="@string/ordenes_item" />
        <item
            android:id="@+id/nav_banc"
            android:icon="@drawable/ic_creditcard"
            android:title="Mis Datos Bancarios" />
        <!--
        <item
            android:id="@+id/nav_lib_direcciones"
            android:icon="@drawable/location_direction"
            android:title="@string/facturas_item" />
            -->
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@android:drawable/btn_star"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/nav_historiales"
            android:icon="@drawable/folder"
            android:title="@string/historiales" />
        <item
            android:id="@+id/nav_calificar"
            android:icon="@drawable/ic_medal"
            android:title="Calificar Chofer" />
        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>
