<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ismcenter.evataxiapp.Actividades.Choferes.PerfilConductorFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/perfilPasajero"
    android:background="@color/primary_light">

    <!-- Imagen de perfil -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="vertical"
        android:background="@drawable/material_background3"
        android:layout_below="@+id/toolbarRecarga">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image"
            android:layout_width="@dimen/perfil_image_size"
            android:layout_height="@dimen/perfil_image_size"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_perfil"
            app:border_color="@android:color/white"
            app:border_width="1dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/toolbarRecarga"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true" />


        <TextView
            android:textSize="20dp"
            android:text="Nombre delpasajero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvNombre"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_below="@+id/circle_image"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pasajero"
            android:id="@+id/tvTipo"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="443dp"
        android:layout_marginTop="130dp"
        android:layout_weight="1" >

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:weightSum="1">

            <!--  <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="35dp"
                  android:textColor="@color/colorPrimaryDark"
                  android:id="@+id/tv_datos_bancarios"
                  android:layout_gravity="center"
                  android:textSize="17dp"
                  android:textStyle="bold"
                  android:text="Datos bancarios"
                  android:background="@drawable/shape_linear"
                  android:layout_marginBottom="10dp"
                  />-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/cedula"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCedula"
                    android:textColor="#9E9E9E"
                    android:text=""/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/correo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#9E9E9E"
                    android:id="@+id/tvCorreo"
                    android:text=""/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/telefonos"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTelefono"
                    android:textColor="#9E9E9E"
                    android:text=""/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/direccion"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#9E9E9E"
                    android:id="@+id/tvDireccion"
                    android:text=""/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/cod_postal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCodigo"
                    android:textColor="#9E9E9E"
                    android:text=""/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/fecha"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#9E9E9E"
                    android:id="@+id/tvFechaNac"
                    android:text=""/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/estatus"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#9E9E9E"
                    android:id="@+id/tvEstatus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#9E9E9E"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>




